# gsheets_mcp

./: AGENTS.md  Cargo.toml  README.md  calendar_dep_patch.txt  gsheets_mcp_architecture_specification.md  gsheets_mcp_development_plan.md  tokio-util-patch.txt
.github/workflows/: ci.yml
handoff/: chat_history.md  handoff_notes.md  open_issues.md
sample_mcp_fs-main/: AGENTS.md  INSTRUCTIONS.md  README.md  generic_prompt.md  grx_product_specification.md
sample_mcp_fs-main/filers_mcp/: DOCUMENTATION.md  deploy.sh  example_config.toml  filers_mcp_architecture_specification.md  filers_mcp_development_plan.md
sample_mcp_fs-main/filers_mcp/docs/: feature_requests.md
sample_mcp_fs-main/filers_mcp/prompts/: main_prompt.md  task_allowed_paths.md  task_deployment.md  task_documentation.md  task_file_tools.md  task_logging.md  task_protocol_integration.md  task_unit_tests.md
sample_mcp_fs-main/filers_mcp/src/: logging.rs  protocol.rs  tools.rs  validation.rs
sample_mcp_fs-main/filers_mcp/tests/: unit.rs
sample_mcp_fs-main/handoff/: open_issues.md
scripts/: bootstrap_rust_rewriter.sh  run_all_transports.sh
src/: auth_manager.rs  config.rs  error.rs  google_api_client.rs  http_server.rs  lib.rs  logging.rs  mcp_server.rs  models.rs  see_server.rs  stdio_server.rs
src/tests/: mod.rs
tests/: e2e.rs  integration.rs  integration_transports.rs  unit.rs
